# ai-doc-processor-latest

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BILLING_FRONTEND_COMPLETE.md  BILLING_MODULE_COMPLETE.md  BILLING_MODULE_IMPLEMENTATION.md  BILLING_QUICK_START.md  Billing and Invoice Requirements.docx  CLAUDE.md  COMPLETE_SYSTEM_DOCUMENTATION_INDEX.md  DATABASE_MIGRATION_GUIDE.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_V3_SUMMARY.md  DOCUMENT_DOWNLOAD_FIX_SUMMARY.md  Dockerfile  EMAIL_SETUP_GUIDE.md  ENTERPRISE_RECOMMENDATIONS.md  EOB Processing with Document Category Routing - Final.json  EOB Processing with Document Category Routing - Fixed.json  FACESHEET_EXTRACTION_FIX.md  FACESHEET_ZERO_DATA_DEBUG.md  FIX_PREPARE_JSON_DATA_LOSS.md  GOOGLE_CLOUD_DEPLOYMENT_GUIDE.md  GOOGLE_DRIVE_FIX.md  IMPLEMENTATION_GUIDE.md  Makefile  N8N_CLAUDE_CODE_INTEGRATION.md  N8N_COMPLETE_WORKFLOW_SETUP_GUIDE.md  N8N_COST_COMPARISON.md  N8N_DOC_CATEGORY_ROUTING_SETUP.md  N8N_HOSTINGER_SETUP_GUIDE.md  N8N_HOSTING_SETUP_GUIDE.md  N8N_PREPARE_CSV_FIX.md  N8N_PRODUCTION_DEPLOYMENT_GUIDE.md  N8N_VPS_PURCHASE_GUIDE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  Prompt.txt  QUICKSTART.md  QUICK_START.md  (+54 more)
.ai/: AI_CHANGELOG.md  AUTO_MERGE_POLICY.yaml  BOOTSTRAP_PROMPT.md  CLAUDE_RULES.md  README.md
.claude/: settings.local.json
.github/: CODEOWNERS
api/: index.js
client/: .env.production  package-lock.json  package.json
config/: database.js  supabase.js
dashboard/: app.py
database/: add_billing_permissions.sql  add_field_unique_constraint.sql  billing_invoice_schema.sql  custom_reports_schema.sql  fix_calculate_client_usage.sql  insert_demo_clients.sql  model_table.sql  mysql_schema.sql  output_profiles.sql  permissions_schema.sql  processing_config.sql  rag_schema.sql  setup.sql  supabase_schema.sql  update_model_table.sql
governance-controller/: README.md  controller.py  repos.yaml
middleware/: auth.js  passwordPolicy.js  rateLimiter.js
n8n-workflows/: EOB_Processing_Webhook_v3_Dynamic_Pricing.json  EOB_Processing_Webhook_v3_FIXED.json  EOB_Processing_with_DocCategory_Routing.json  EOB_Processing_with_DocCategory_Routing_COMPLETE.json  EOB_Simplified_Working_Webhook.json  Fixed_EOB_Processing_with_Routing.json  NODE_BY_NODE_CONFIGURATION.md  SIMPLIFIED_WORKFLOW_GUIDE.md  WORKFLOW_FIXED_AND_TESTED.md  WORKFLOW_FIXES_APPLIED.md  check_connectivity.py  check_modified_nodes.py  compare_files.py  diagnose_issue.py  verify_node_ids.py
python_processor/: .dockerignore  .env.example  .env.production.example  Dockerfile  README.md  __init__.py  config.py  cost_tracker.py  document_ai_processor.py  file_watcher.py  google_drive_service.py  main.py  mistral_processor.py  openai_extractor.py  orchestrator.py  requirements.txt  server.py  setup.bat
reports/: HIPAA_Compliance_Report.md  HITRUST_Readiness_Report.md  ISO27001_Control_Matrix.md  ISO_Risk_Register_Report.md  SOC2_Control_Matrix.md  SOC2_TypeII_Evidence_Report.md  roi_report.py
routes/: admin.js  auth.js  billing.js  categoryCreation.js  customReports.js  documents.js  outputProfiles.js  permissions.js  processingConfig.js  profile.js  rag.js  reports.js
scripts/: __init__.py  ai_engine.py  ai_metrics.py  ai_rules_audit.py  ai_rules_check.py  collect_type2_evidence.py  compliance_score_engine.py  export_compliance_evidence.py  fix-config.js  (+19 more)
(+86 files in other folders)
