[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-cicd-template"
version = "0.1.0"
description = "Autonomous CI/CD pipeline template with AI-assisted workflows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

# ===========================================
# Ruff Configuration
# ===========================================
[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
]
ignore = [
    "E501",  # line too long (handled by black)
    "S101",  # assert usage (allowed in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"scripts/ai_rules_audit.py" = ["S603", "S607", "S108"]  # subprocess + temp file for workflow output
"scripts/pr_self_heal.py" = ["S603", "S607"]  # subprocess with hardcoded git commands is safe
"scripts/slack_notifier.py" = ["S310"]  # urlopen with validated webhook URL is safe
"scripts/pr_commenter.py" = ["S310"]  # urlopen with GitHub API URL is safe
"governance-controller/controller.py" = ["S310"]  # urlopen with GitHub/Slack API URLs is safe

# ===========================================
# Black Configuration
# ===========================================
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

# ===========================================
# isort Configuration
# ===========================================
[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["src", "scripts"]

# ===========================================
# MyPy Configuration
# ===========================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

# ===========================================
# Pytest Configuration
# ===========================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow",
]

# ===========================================
# Coverage Configuration
# ===========================================
[tool.coverage.run]
source = ["src"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
fail_under = 85
